Fix responsive navbar on IE

--- a/assets/sass/material/_toolbar.scss
+++ b/assets/sass/material/_toolbar.scss
@@ -290,6 +290,7 @@
 .navbar-collapse {
   align-items: center;
   flex-basis: 100%;
+  flex-grow: 1;
 }
 
 .navbar-expand {
@@ -334,6 +335,7 @@
 
         .navbar-collapse {
           display: flex !important;
+          flex-basis: auto;
         }
 
         .navbar-nav {
